syntax="proto3";

import "common.proto";

option java_package = "br.com.finsavior.grpc.payment";
option java_multiple_files = true;

message SubscriptionRequest {
  string subscriptionId = 1;
  string externalUserId = 2;
  string externalProvider = 3;
  string externalUserEmail = 4;
  int64 userId = 5;
  string planId = 6;
}

service PaymentService {
  rpc createSubscription(SubscriptionRequest) returns (GenericResponse);
}